// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch members and render for non-admin 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <A11ySkipTarget
    anchor="members_main"
  />
  <MembersPageHeader
    handleAddMember={[Function]}
    loading={true}
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    refreshMembers={[Function]}
  />
</div>
`;

exports[`should fetch members and render for non-admin 2`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <A11ySkipTarget
    anchor="members_main"
  />
  <MembersPageHeader
    handleAddMember={[Function]}
    loading={false}
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    refreshMembers={[Function]}
  />
  <MembersListHeader
    handleSearch={[Function]}
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    total={3}
  />
  <MembersList
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    organizationGroups={Array []}
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={3}
  />
</div>
`;
